Fix alwyas appearing scrollbar

--- a/themes/skeleton/custom.css
+++ b/themes/skeleton/custom.css
@@ -146,5 +146,5 @@ h1.herotext {
 }
 
 code {
-	overflow-x: scroll;
+	overflow-x: auto;
 }
